try to fix the problem on mobile where the contact  section is wider than the whole page

--- a/styles.css
+++ b/styles.css
@@ -492,6 +492,7 @@ main {
 /* Contacts */
 .contact-section {
     text-align: center;
+    width: 100%;
     max-width: 900px;
     margin: 0 auto;
     font-size: 2rem;
